--- a/pinyougou-shop-web/pom.xml
+++ b/pinyougou-shop-web/pom.xml
@@ -86,6 +86,11 @@
 			<artifactId>spring-security-config</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.pinyougou</groupId>
+			<artifactId>pinyougou-sellergoods-interface</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 
